--- a/site1/miniproject1ht.html
+++ b/site1/miniproject1ht.html
@@ -4,12 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Ervid Molina</title>
-    <link rel="stylesheet" href="miniproject1.css" type="text/css">
-    <script type="text/javascript" src= "js/miniproject1.js">
+    <link rel="stylesheet" href="miniproject1-cs.css" type="text/css">
 
-    </script>
   </head>
   <body>
+    <script type="text/javascript" src= "miniproject1-js.js">  </script>
      <h1> cargar imagen </h1>
      <div id="imagenes">Imagenes</div>
 
