mini project1 fines.

--- a/site1/miniproject1ht.html
+++ b/site1/miniproject1ht.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="miniproject1cs.css" type="text/css">
   </head>
   <body>
-    <script src ="http://www.dukelearntoprogram.com/course1/common/js/image/SimpleImage.js">
-    </script>
-    <script type="text/javascript" src= "miniproject1js.js">  </script>
+    <div id="main-content">
+      <script type="text/javascript" src= "miniproject1js.js">  </script>
+      <p></p>
      <h1> CARGAR IMAGENES</h1>
       <p> Muestra la imagen a la cual se le va a realizar los distintos filtros </p>
      <div id="imagenes">LOAD IMAGE</div>
@@ -34,5 +34,6 @@
        <input type= "button" value="Reset Image" onclick="Resetfilter()"/>
      </p>
      <p> Restablese imagen </p>
+   </div>
   </body>
 </html>
