--- a/site1/miniproject1h.html
+++ b/site1/miniproject1h.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Ervid Molina</title>
-    <link rel="stylesheet" href="miniproject1cs.css" type="text/css">
+    <link rel="stylesheet" href="miniproject1c.css" type="text/css">
   </head>
   <body>
 
-      <script type="text/javascript" src= "miniproject1js.js">  </script>
+      <script type="text/javascript" src= "miniproject1j.js">  </script>
         <h1> CARGAR IMAGENES</h1>
         <p> Muestra la imagen a la cual se le va a realizar los distintos filtros </p>
     <div id="imagenes">LOAD IMAGE</div>
