--- a/site1/miniproject1h.html
+++ b/site1/miniproject1h.html
@@ -16,7 +16,7 @@
           <canvas id="canvas"></canvas>
         </p>
         <p>
-        <input type= "file" multiple= "false" accept="image/*" id="finput" onchange="upload()"/>
+        <input type= "file" multiple= "false" accept="image/*" id="finput" onclick="upload()"/>
         </p>
      <div id="filter">FILTER</div>
         <p> Filtro que se le pueden realizar a la imagen </p>
